tests/paczka1/small_fuzzy/97298876.err
Error in line 3: jclT9 S902 64,0
Error in line 2: Ymvp S496 85,0
Error in line 4: S902 S336 19,1
Error in line 7: S902 S361 89,1
Error in line 9: S902 S902 2,1
Error in line 12: S902 S336 13,5
